check_output.txt
    Checking maniac-runtime v0.1.0 (C:\Users\info\repos\bisque-io\bop\crates\maniac-runtime)
error[E0277]: `AsyncSocketState` doesn't implement `std::fmt::Debug`
   --> crates\maniac-runtime\src\runtime\worker.rs:268:9
    |
224 | #[derive(Clone, Debug)]
    |                 ----- in this derive macro expansion
...
268 |         state: crate::net::AsyncSocketState,
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `std::fmt::Debug` is not implemented for `AsyncSocketState`
   --> crates\maniac-runtime\src\net\async_socket.rs:42:1
    |
 42 | pub struct AsyncSocketState {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: add `#[derive(Debug)]` to `AsyncSocketState` or manually `impl std::fmt::Debug for AsyncSocketState`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `maniac-runtime` (lib) due to 1 previous error
